--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container">
-                      <a class="navbar-brand" href="#"> <img src="/resources/img/logo.png" alt=""> </a>
+                      <a class="navbar-brand" href="#"> <img src="resources/img/logo.png" alt=""> </a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -49,9 +49,7 @@
                           <li class="nav-item">
                             <a class="nav-link" href="#">CONTACT</a>
                           </li>
- 
                         </ul>
-                       
                       </div>
                     </div>
                   </nav>
