--- a/index.html
+++ b/index.html
@@ -55,12 +55,44 @@
                   </nav>
                   <div class="top-header-text text-center mt-5">
                     <h3 class="text-light mt-5">CREATIVE BUSINESS SPECIALIST</h4>
-                   <div class="border-span"> <span class="display-2">WE ARE ONU</span></div>
-                    <h3 class="text-light" >WEB DESIGN/ ONE PAGE/ CREATIVE </h2>
+                   <h1>WE ARE <span>ONU</span></h1>
+                    <h2>WEB DESIGN/ ONE PAGE/ CREATIVE </h2>
                   </div>
                       </div>
                     </div>
-                 
+                 </section>
+    <!-- about -->
+    <section id="about" class="text-center mt-5 p-4">
+      <div class="container">
+        <div class="row">
+          <h3 class="display-5">ABOUT US </h3>
+          <p class="lead py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum purus at sem ornare <br> sodales.
+             Morbi leo nulla, pharetra vel felis nec, ullamcorper condimentum quam. </p>
+             <div class="col-sm col-md-6 col-lg-3 mt-5">
+              <img src="/resources/img/about-1.png" alt="">
+              <h6 class="text-bold p-2 text-uppercase">Web Design</h6>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit metus,
+                 imperdiet nefacibus vulputate, vulputate at neque. </p>
+             </div>
+             <div class="col-sm col-md-6 col-lg-3 mt-4 ">
+              <img src="/resources/img/about-2.png" alt="">
+              <h6 class="text-bold p-2 text-uppercase">Web Developer</h6>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit metus,
+                 imperdiet nefacibus vulputate, vulputate at neque. </p>
+             </div>
+             <div class="col-sm col-md-6 col-lg-3 mt-4 "> 
+              <img src="/resources/img/about-3.png" alt="">
+              <h6 class="text-bold p-2 text-uppercase">Digital Marketing</h6>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit metus,
+                 imperdiet nefacibus vulputate, vulputate at neque. </p></div>
+             <div class="col-sm col-md-6 col-lg-3 mt-4 ">
+              <img src="/resources/img/about-4.png" alt="">
+              <h6 class="text-bold p-2 text-uppercase">Web Development</h6>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit metus,
+                 imperdiet nefacibus vulputate, vulputate at neque. </p>
+             </div>
+            </div>
+      </div>
     </section>
      
 
