--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
           <p class="lead py-3 text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum purus at sem ornare <br> sodales.
              Morbi leo nulla, pharetra vel felis nec, ullamcorper condimentum quam. </p>
              <div class="col-sm col-md-6 col-lg-3 mt-4">
-              <img src="/resources/img/service-1.png" alt=""> 
+              <img src="resources/img/service-1.png" alt=""> 
              </div>
              <div class="col-sm col-md-6 col-lg-3 mt-4 ">
-              <img src="/resources/img/service-2.png" alt="">
+              <img src="resources/img/service-2.png" alt="">
               
              </div>
              <div class="col-sm col-md-6 col-lg-3 mt-4 "> 
-              <img src="/resources/img/service-3.png" alt="">
+              <img src="resources/img/service-3.png" alt="">
               </div>
              <div class="col-sm col-md-6 col-lg-3 mt-4 ">
-              <img src="/resources/img/service-4.png" alt="">
+              <img src="resources/img/service-4.png" alt="">
             
              </div>
             </div>
