counter part complete

--- a/index.html
+++ b/index.html
@@ -178,6 +178,38 @@
             </div>
       </div>
     </section>
+    <!-- counter -->
+    <!--        project complete start-->
+  </section>
+  <section class="complete-project text-center text-light py-5 js-function" id="project">
+    <div class="container">
+      <div class="row my-auto ">
+        <div class="col-sm col-md-6 col-lg-3 row-center">
+                      <h3 class="lead"><span class="counter">200</h3>
+                      <h6 class="lead">COMPLETED PROJECTS</h6>
+
+                  </div>
+                  <div class="col-sm col-md-6 col-lg-3 row-center">
+                   
+                    <h3 class="lead"><span class="counter">50</span></h3>
+                    <h6 class="lead">HAPPY CLIENTS</h6>
+
+                </div>
+                <div class="col-sm col-md-6 col-lg-3 row-center">
+                  <h3 class="lead"><span class="counter">500</span></h3>
+                  <h4 class="lead">CUPS OF COFFEE OFFERED</h4>
+
+              </div>
+              <div class="col-sm col-md-6 col-lg-3 row-center">
+                <h3 class="lead"><span class="counter">25</span></h3>
+                <h4 class="lead">ARTICLES PUBLISHED</h4>
+            </div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+  </section>
     <!-- contact  -->
     <section id="contact" class="text-center mt-2 py-5">
       <div class="container">
