mix-it-up complete

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project Modern Web Design CodersTrust</title>
-    <!-- custom css -->
-    <link rel="stylesheet" href="resources/css/style.css">
+   
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
 
-    <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/6edcb902cc.js" crossorigin="anonymous"></script>
+     <!-- responsive css -->
+    <link rel="stylesheet" href="resources/css/responsive.css">
+
+     <!-- custom css -->
+     <link rel="stylesheet" href="resources/css/style.css">
+
+
 </head>
 <body>
     
@@ -118,6 +122,61 @@
             </div>
       </div>
     </section>
+
+    <!-- portfolio -->
+    <section class="work js-function" id="work">
+      <div class="container">
+      <div class="row">
+          <h2 class="lead display-6 text-center">PORTFOLIO</h2>
+         <p class="lead text-center">orem ipsum dolor sit amet, consectetur adipiscing elit. Mauris interdum purus at sem ornare <br>
+           sodales. Morbi leo nulla, pharetra vel felis nec, ullamcorper condimentum qua</p>
+          <button class="btn btn-success" type="button" data-filter="all">Allworks</button>
+          <button class="btn btn-primary" type="button" data-filter=".design">webDesign</button>
+          <button class="btn btn-primary" type="button" data-filter=".code">uidesign</button>
+          <button class="btn btn-primary" type="button" data-filter=".photography">branding</button>
+          <button class="btn btn-primary" type="button" data-filter=".apps">illustration</button>
+      </div>
+      <div class="grid-work-container mt-5">
+          <div class="grid-work-col-4 mix">
+              <div class="grid-work-item mix design">
+                  <img src="resources/img/portfolio-1.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix design">
+                  <img src="resources/img/portfolio-2.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix code">
+                  <img src="resources/img/portfolio-3.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix code">
+                  <img src="resources/img/portfolio-4.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix photography">
+                  <img src="resources/img/portfolio-5.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix photography">
+                  <img src="resources/img/portfolio-6.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix apps">
+                  <img src="resources/img/portfolio-1.png" alt="">
+
+              </div>
+              <div class="grid-work-item mix apps">
+                  <img src="resources/img/portfolio-2.png" alt="">
+
+              </div>
+
+
+          </div>
+
+      </div>
+    </div>
+  </section>
 
     <!-- pricing -->
     <section id="pricing" class="text-center mt-2 py-5">
@@ -297,7 +356,26 @@
         </div>
       </footer>
 
+      <!-- bootstrap js -->
     <script src="vendors/js/bootstrap.min.js" ></script>
+  
+    <!--jQuery -->
+    <script src="vendors/js/jquery-3.5.0.min.js"></script>
+
+    <!--fontawesome-->
+    <script src="https://kit.fontawesome.com/91677cab54.js" crossorigin="anonymous"></script>
+    <!--vendors js-->
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
+    <script src="vendors/js/jquery-smooth-scroll.js"></script>
+    <script src="vendors/js/jquery.counterup.min.js"></script>
+    <script src="vendors/js/mixitup.min.js"></script>
+    <script src="vendors/js/owl.carousel.min.js"></script>
+
+    <script src="vendors/js/particles.js"></script>
+    <script src="vendors/js/app.js"></script>
+    <!--resources js-->
+    <script src="resources/js/main.js">
+    </script>
 
 </body>
 </html>
